--- a/ApiRest/v1/src/main/resources/application.properties
+++ b/ApiRest/v1/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-# Configuración de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/NutriLifeDB 
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.application.name=nutrilife-service
 
+server.servlet.context-path = /ApiRest/v1
 
-# Configuración JPA
+spring.datasource.url = jdbc:postgresql://localhost:5432/nutrilifedb
+spring.datasource.username = postgres
+spring.datasource.password = 1234
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql = true
 
+nutrilife.openapi.dev-url=http://localhost:8080/ApiRest/v1/
