--- a/ApiRest/v1/src/main/resources/application.properties
+++ b/ApiRest/v1/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path = /ApiRest/v1
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/nutrilifedb
 spring.datasource.username = postgres
-spring.datasource.password = 1234
+spring.datasource.password = Lionel611
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
